--- a/k-means clustering.Rmd
+++ b/k-means clustering.Rmd
@@ -3,7 +3,7 @@ title: "clustering method: k-means"
 output: html_document
 ---
 Purpose: To segment mall customers by their annual income and spending score using k-means clustering and identify target group for possible intervention(s) to increase their spending score.
-The optimal number of clusters (k) is explored with the Elbow, average Silhouetter and Gap statistic methods. Data source: Kaggle dataset (<https://www.kaggle.com/vjchoudhary7/customer-segmentation-tutorial-in-python/activity>).
+The optimal number of clusters (k) is explored with the Elbow, average Silhouette and Gap statistic methods. Data source: Kaggle dataset (<https://www.kaggle.com/vjchoudhary7/customer-segmentation-tutorial-in-python/activity>).
 
 #### Load required packages and data
 ```{r, message = FALSE}
